examples/c/error-codes/violates-constraint/fatal/CV-TSE1-bad-static.output
CV-TSE1-bad-static.c:9:11: error: initializing 'struct s' with an expression of incompatible type 'int'
 struct s s0 = 1;
          ^    ~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
